almost working version v0.1

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,8 @@
 
 {% block content %}
     {{ super() }}
+{% for msg in get_flashed_messages() %}
+<div class="flash">{{msg}}</div>
+{% endfor %}
     <h1>Главная страница</h1>
 {% endblock content %}
