--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 {{ super() }}
+{% for msg in get_flashed_messages() %}
+<div class="flash">{{msg}}</div>
+{% endfor %}
 <form action="/sign-up" method="post" class="form-user-data">
     <p><label>Имя: </label> <input type="text" name="username" value="" requied />
     <p><label>E-mail: </label> <input type="text" name="email" value="" requied />
-    <p><label>Пароль: </label> <input type="text" name="password" value="" requied />
-    <p><label>Повторите пароль: </label> <input type="text" name="password" value="" requied />
-    <p><input type="submit" value="Войти" />
+    <p><label>Пароль: </label> <input type="text" name="password1" value="" requied />
+    <p><label>Повторите пароль: </label> <input type="text" name="password2" value="" requied />
+    <p><input type="submit" value="Зарегистрироваться" />
 </form>
 {% endblock %}
