--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,3 +35,13 @@ ul.mainmenu li a {
     font-size: 16px;
 }
 
+.flash { padding: 10px; }
+.flash.success {
+    border: 1px solid #21DB56;
+    background: #AEFFC6;
+}
+
+.flash.error {
+    border: 1px solid #FF4343;
+    background: #FF9C9C;
+}
