Flask-site v1.1 include SQLalchemy

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
     {{ super() }}
+<h2>{{ title }}</h2>
+<div>{{test_text}}</div>
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
